@@ -56,6 +56,16 @@ Exceptions:
 
 If ASN1_TIME_print failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
 
+=head2 to_tm
+
+C<method to_tm : int ($tm : L<Sys::Time::Tm|SPVM::Sys::Time::Tm>);>
+
+Calls native L<ASN1_TIME_to_tm|https://docs.openssl.org/1.1.1/man3/ASN1_TIME_set> function given the pointer value of the instance, $tm.
+
+Exceptions:
+
+If ASN1_TIME_to_tm failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
 =head2 DESTROY
 
 C<method DESTROY : void ();>
