@@ -4,6 +4,7 @@
 class Net::SSLeay::ASN1_TIME : pointer {
   
   use Net::SSLeay::BIO;
+  use Sys::Time::Tm;
   
   # Class Methods
   native static method new : Net::SSLeay::ASN1_TIME ();
@@ -16,10 +17,10 @@ class Net::SSLeay::ASN1_TIME : pointer {
   native method DESTROY : void ();
   
   native method print : int ($b : Net::SSLeay::BIO);
+  
+  native method to_tm : int ($tm : Sys::Time::Tm);
 
 =pod TODO
-
-int ASN1_TIME_to_tm(const ASN1_TIME *s, struct tm *tm);
 
 ASN1_GENERALIZEDTIME *ASN1_TIME_to_generalizedtime(ASN1_TIME *t, ASN1_GENERALIZEDTIME **out);
 
